--- a/index.html
+++ b/index.html
@@ -64,14 +64,17 @@
         </div>
 
     </header>
-    <div id="banner">
-        <iframe src="https://www.powr.io/plugins/plan-comparison/view?unique_label=818e59b0_1543738191&external_type=iframe" width="100%" frameborder="0" id="sports" height="600"></iframe>
+    <div>
+       <div id="banner">
+        </div>
         <div id="banner_bogo">
             HOMEMADE, HAND POURED <br> CANDLES
         </div>
 
-        <div id="banner_shop"><a href="" class="btn-main">SHOP NOW </a>
+        <br><div id="banner_shop"><a href="" class="btn-main">SHOP NOW </a>
         </div>
+        <iframe src="https://www.powr.io/plugins/plan-comparison/view?unique_label=818e59b0_1543738191&external_type=iframe" width="100%" frameborder="0" id="sports" height="600"></iframe>
+        
     </div>
     <footer>
         <div>
