--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
     <meta name="author" content="">
-    <link rel=stylesheet type="text/css" href="main.css">
+    <link rel=stylesheet type="text/css" href="stylesheet/main.css">
 
     <link rel="stylesheet" href="Slicknav/slicknav.css">
 
@@ -67,9 +67,11 @@
     <div>
        <div id="banner">
         </div>
+<!--
         <div id="banner_bogo">
             HOMEMADE, HAND POURED <br> CANDLES
         </div>
+-->
 
         <br><div id="banner_shop"><a href="" class="btn-main">SHOP NOW </a>
         </div>
