--- a/index.html
+++ b/index.html
@@ -65,26 +65,27 @@
 
     </header>
     <div>
-       <div id="banner">
+        <div id="banner">
         </div>
-<!--
+        <!--
         <div id="banner_bogo">
             HOMEMADE, HAND POURED <br> CANDLES
         </div>
 -->
 
-        <br><div id="banner_shop"><a href="" class="btn-main">SHOP NOW </a>
+        <br>
+        <div id="banner_shop"><a href="Products/products.html" class="btn-main">SHOP NOW </a>
         </div>
         <iframe src="https://www.powr.io/plugins/plan-comparison/view?unique_label=818e59b0_1543738191&external_type=iframe" width="100%" frameborder="0" id="sports" height="600"></iframe>
-        
+
     </div>
-    <footer>
+    <div>
         <div>
             <script src="//www.powr.io/powr.js?external-type=html"></script>
             <div class="powr-mailing-list" id="96e01d69_1543732057"></div>
         </div>
 
-    </footer>
+    </div>
 </body>
 
 </html>
