--- a/products/products.html
+++ b/products/products.html
@@ -66,7 +66,7 @@
     </header>
     <div class="flex-container">
         <div>Carolina Candle <br><img alt="carolina" src="../images/product-images/carolina.jpg"><br><br>
-            <div id="oddbutton"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LBM6C795EYYWY" class="btn-main">Add To Cart</a></div>
+            <span id="oddbutton"><a href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=LBM6C795EYYWY" class="btn-main">Add To Cart</a></span>
         </div>
         <div id="duke_candle">Duke Candle<br> <img alt="duke candle" src="../images/product-images/duke.jpg"><br><br><a class="btn-main" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=NQ4QBFXXXZDCE">Add To Cart</a></div>
         <div>Dallas Candle <br> <img alt="dallas candle" src="../images/product-images/dallas.jpg"><br><br><a class="btn-main" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=ZYTQEVPSRE3J6">Add To Cart</a></div>
@@ -75,4 +75,5 @@
         <div>Scented Candle <br> <img alt="scented candles" src="../images/product-images/scented.png"><br><br><a class="btn-main" href="https://www.paypal.com/cgi-bin/webscr?cmd=_s-xclick&hosted_button_id=W28A5FYSAN486">Add To Cart</a></div>
     </div>
 </body>
+
 </html>
