--- a/Personalization/personal.html
+++ b/Personalization/personal.html
@@ -74,53 +74,16 @@
         });
 
     </script>
-    <div class="footer">
+    <footer class="footer">
         <div class="container bottom_border">
             <div class="row">
-                <div class=" col-sm-4 col-md col-sm-4  col-12 col"></div>
                 <div class=" col-sm-4 col-md col-sm-4  col-12 col">
                     <h5 class="headin5_amrc col_white_amrc pt2">Find us</h5>
                     <!--headin5_amrc-->
-                    <p class="mb10">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s</p>
-                    <p><i class="fa fa-location-arrow"></i> 9878/25 sec 9 rohini 35 </p>
-                    <p><i class="fa fa-phone"></i> +91-9999878398 </p>
-                    <p><i class="fa fa fa-envelope"></i> info@example.com </p>
-
-
-                </div>
-
-
-                <div class=" col-sm-4 col-md  col-6 col">
-                    <h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
-                    <!--headin5_amrc-->
-                    <ul class="footer_ul_amrc">
-                        <li><a href="http://kalarikendramdelhi.com">Image Rectoucing</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Clipping Path</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Hollow Man Montage</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Ebay & Amazon</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Hair Masking/Clipping</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Image Cropping</a></li>
-                    </ul>
-                    <!--footer_ul_amrc ends here-->
-                </div>
-
-
-                <div class=" col-sm-4 col-md  col-6 col">
-                    <h5 class="headin5_amrc col_white_amrc pt2">Quick links</h5>
-                    <!--headin5_amrc-->
-                    <ul class="footer_ul_amrc">
-                        <li><a href="http://kalarikendramdelhi.com">Remove Background</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Shadows & Mirror Reflection</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Logo Design</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Vectorization</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Hair Masking/Clipping</a></li>
-                        <li><a href="http://kalarikendramdelhi.com">Image Cropping</a></li>
-                    </ul>
-                    <!--footer_ul_amrc ends here-->
-                </div>
-
-
-                <div class=" col-sm-4 col-md  col-12 col">
+                    <p class="mb10">We would love to hear from you and discuss what we have to offer.</p>
+                   
+                    <p><i class="fa fa-phone"></i> +1 (336) 972-6676 </p>
+                    <p><i class="fa fa fa-envelope"></i> CandleLadyStokes@Gmail.com </p>
                 </div>
             </div>
         </div>
@@ -128,26 +91,24 @@
 
         <div class="container">
             <ul class="foote_bottom_ul_amrc">
-                <li><a href="http://kalarikendramdelhi.com">Home</a></li>
-                <li><a href="http://kalarikendramdelhi.com">About</a></li>
-                <li><a href="http://kalarikendramdelhi.com">Services</a></li>
-                <li><a href="http://kalarikendramdelhi.com">Pricing</a></li>
-                <li><a href="http://kalarikendramdelhi.com">Blog</a></li>
-                <li><a href="http://kalarikendramdelhi.com">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="About/about.html">About</a></li>
+                <li><a href="products/products.html">Products</a></li>
+                <li><a href="Contact/contact.html">Contact</a></li>
             </ul>
             <!--foote_bottom_ul_amrc ends here-->
-            <p class="text-center">Copyright @2018 | Designed With by <a href="#">Trazon Mitchell</a></p>
+            <p class="text-center">Copyright @2018 | Designed by <a href="#">Trazon Mitchell</a></p>
 
             <ul class="social_footer_ul">
                 <li><a href="http://kalarikendramdelhi.com"><i class="fab fa-facebook-f"></i></a></li>
                 <li><a href="http://kalarikendramdelhi.com"><i class="fab fa-twitter"></i></a></li>
-                <li><a href="http://kalarikendramdelhi.com"><i class="fab fa-linkedin"></i></a></li>
-                <li><a href="http://kalarikendramdelhi.com"><i class="fab fa-instagram"></i></a></li>
             </ul>
             <!--social_footer_ul ends here-->
         </div>
+        <script src="//www.powr.io/powr.js?external-type=html"></script> 
+ <div class="powr-mailing-list" id="96e01d69_1543732057"></div>
 
-    </div>
+    </footer>
 </body>
 
 </html>
