--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                             <!--                            <img src="images/christmas-1911637.jpg" alt="New york" style="width:80vw; height: auto;">-->
                             <div id="banner" style="width: 100%; height: 600px;">
                                 <br>
-                                <div id="banner_shop"><a href="Products/products.html" class="btn-main">SHOP NOW </a>
+                                <div id="banner_shop"><a href="products/products.html" class="btn-main">SHOP NOW </a>
                                 </div>
                             </div>
 
@@ -99,6 +99,9 @@
                             <!--                            <img src="images/ncaa.jpg" alt="Los Angeles" style="width:80vw; height: auto;">-->
                             <iframe src="https://www.powr.io/plugins/plan-comparison/view?unique_label=818e59b0_1543738191&external_type=iframe" width="100%" height="600" frameborder="0" id="sports">
                             </iframe>
+                             <div class="alt_banner"><a href="products/products.html" class="btn-main">SHOP SPORTS CANDLES NOW </a>
+                                </div>
+                            
                             <div class="carousel_caption">
 
 
@@ -107,6 +110,8 @@
 
                         <div class="item">
                             <div id="scented_carousel" style="width: 100%; height: 600px;">
+                                <div class="alt_banner_scented"><a href="products/products.html" class="btn-main">SHOP SCENTED CANDLES NOW </a>
+                                </div>
                                 <!--                            <img src="images/pexels-photo-580039.jpeg" alt="Chicago" style="width:80vw; height: auto">-->
                             </div>
                         </div>
