--- a/About/about.html
+++ b/About/about.html
@@ -39,7 +39,7 @@
                 <li><a href="about.html">ABOUT</a></li>
                 <li><a href="../products/products.html">PRODUCTS</a>
                 </li>
-                <li><a href="contact.html">CONTACT</a></li>
+                <li><a href="../Contact/contact.html">CONTACT</a></li>
             </ul>
         </nav>
         <div id=subheader>
