--- a/Personalization/personal.html
+++ b/Personalization/personal.html
@@ -60,7 +60,8 @@
         </div>
 
     </header>
-   <h3 style="text-align: center; margin: 50px;">For the time being, please send all inquiries about personalized candles to CandleLadyStokes@gmail.com, with "Personalized Candle" as the subject, and we will get back to you promptly. <br>Thank you.</h3>
+    <div id="container">
+        <h3 style="text-align: center; margin: 50px;">For the time being, please send all inquiries about personalized candles to CandleLadyStokes@gmail.com, with "Personalized Candle" as the subject, and we will get back to you promptly. <br>Thank you.</h3></div>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
