--- a/Contact/contact.html
+++ b/Contact/contact.html
@@ -93,17 +93,17 @@
 
         <div class="container">
             <ul class="foote_bottom_ul_amrc">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="About/about.html">About</a></li>
-                <li><a href="products/products.html">Products</a></li>
-                <li><a href="Contact/contact.html">Contact</a></li>
+                <li><a href="../index.html">Home</a></li>
+                <li><a href="../About/about.html">About</a></li>
+                <li><a href="../products/products.html">Products</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
             <!--foote_bottom_ul_amrc ends here-->
             <p class="text-center">Copyright @2018 | Designed by <a href="#">Trazon Mitchell</a></p>
 
             <ul class="social_footer_ul">
-                <li><a href="http://kalarikendramdelhi.com"><i class="fab fa-facebook-f"></i></a></li>
-                <li><a href="http://kalarikendramdelhi.com"><i class="fab fa-twitter"></i></a></li>
+                <li><a href="https://www.facebook.com/tina.martin.16752?ref=br_rs"><i class="fab fa-facebook-f"></i></a></li>
+                <li><a href="../Account/account.html"><i class="fab fa-twitter"></i></a></li>
             </ul>
             <!--social_footer_ul ends here-->
         </div>
